<resources>
    <string name="app_name">ConcertMate</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_filter">FIlterActivity</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="date">Dates</string>
    <string name="category">Categories</string>
    <string name="title_activity_base">ConcertMate</string>
    <string name="alternative">Alternative and Indie</string>
    <string name="club">Club and Dance</string>
    <string name="country">Country/Fold</string>
    <string name="metal">Hard Rock/Metal</string>
    <string name="jazz">Jazz/Blues</string>
    <string name="rb">R&amp;B/Urban Soul</string>
    <string name="rap">Rap and Hip-Hop</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="tribute">Tribute Bands</string>

    <string name="name">Name:</string>
    <string name="date_single">Date:</string>
    <string name="time">Time:</string>
    <string name="genre">Genre:</string>
    <string name="sub_genre">Sub-Genre</string>

    <string name="venue_name">Venue:</string>
    <string name="address">Address:</string>
    <string name="postcode">PostCode:</string>
    <string name="parking">Parking:</string>
    <string name="accessible">Accessible:</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_delete">Delete</string>
    <string name="title_save">Save</string>
    <string name="deleteNotesMulti">Delete</string>
    <string name="no_results">No results found, please change filter information.</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="delete_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dialog_username_title">Change Username</string>
    <string name="dialog_email_title">Change Email</string>
    <string name="dialog_password_title">Change Password</string>
    <string name="dialog_username_current">Current Username: </string>
    <string name="dialog_email_current">Current Email: </string>
    <string name="dialog_password_current">Current Password: </string>
    <string name="dialog_username_new">New Username....</string>
    <string name="dialog_email_new">New Email....</string>
    <string name="dialog_password_new">New Password....</string>
    <string name="current_password">Current Password....</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_sign_in">Sign in with Google</string>
</resources>
